# PaddleOCRv2_TensorRT

./: CMakeLists.txt  LICENSE  README.md  main.cpp  parameters.txt
include/: Convert.h  det.h  ocr.h  parameterReader.h  rec.h  utility.h
src/: Convert.cpp  det.cpp  ocr.cpp  preprocess_op.cpp  rec.cpp  utility.cpp
tools/: CMakeLists_nx.txt  CMakeLists_x86.txt
